Вывод базы данных

--- a/Python/Host Maid/Templates/about.html
+++ b/Python/Host Maid/Templates/about.html
@@ -1,9 +1,9 @@
 {% extends "base/main.html" %}
 
 {% block title %}
-	About
+	{{data.title}}
 {% endblock %}
 
 {% block content %}
-	ABOUT
+	{{data.content}}
 {% endblock %}
