--- a/Python/Host Maid/Templates/ins/menu.html
+++ b/Python/Host Maid/Templates/ins/menu.html
@@ -1,4 +1,9 @@
 <div>
-    <p><a href="/index">index</a></p>
-    <p><a href="/about">about</a></p>
+    <p><a href="{{url_for("about")}}">index</a></p>
+    <p><a href="{{url_for("create")}}">create</a></p>
+    <p><a href="{{url_for("delete")}}">delete</a></p>
+    <p><a href="{{url_for("edit")}}">edit</a></p>
+    <p><a href="{{url_for("index")}}">index</a></p>
+    <p><a href="{{url_for("user_list")}}">user_list</a></p>
+    <p><a href="{{url_for("user")}}">user</a></p>
 </div>
