--- a/Python/Host Maid/Templates/ins/menu.html
+++ b/Python/Host Maid/Templates/ins/menu.html
@@ -1,9 +1,9 @@
-<div>
-    <p><a href="{{url_for("about")}}">index</a></p>
-    <p><a href="{{url_for("create")}}">create</a></p>
-    <p><a href="{{url_for("delete")}}">delete</a></p>
-    <p><a href="{{url_for("edit")}}">edit</a></p>
-    <p><a href="{{url_for("index")}}">index</a></p>
-    <p><a href="{{url_for("user_list")}}">user_list</a></p>
-    <p><a href="{{url_for("user")}}">user</a></p>
+<div class = "menu">
+    <p><a href="{{url_for("index")}}"><button class = "menu_btn">Главная</button></a></p>
+    <p><a href="{{url_for("create_user")}}"><button class = "menu_btn">Создать</button></a></p>
+    <p><a href="{{url_for("delete")}}"><button class = "menu_btn">Удалить</button></a></p>
+    <p><a href="{{url_for("edit")}}"><button class = "menu_btn">Редактировать</button></a></p>
+    <p><a href="{{url_for("about")}}"><button class = "menu_btn">О нас</button></a></p>
+    <p><a href="{{url_for("user_list")}}"><button class = "menu_btn">Список пользователй</button></a></p>
+    <p><a href="{{url_for("user")}}"><button class = "menu_btn">Профиль</button></a></p>
 </div>
