--- a/Python/Host Maid/static/css/styles.css
+++ b/Python/Host Maid/static/css/styles.css
@@ -2,33 +2,58 @@
 
 body {
     background-color: grey;
-    border-style: solid;
-    border-color: orange;
     height: 80%;
 }
 
 header {
     width: 100%;
-    background-color: rgb(75, 75, 75);
-    justify-content: center;
-    text-align: center;
-    border-style: solid;
-    border-color: var(--b1);
+    height: 4.5em;
+    background: #696969;
 }
 
 aside {
     width: 20%;
-    border: solid 1px purple;
 }
 
 footer {
     width: 100%;
-    height: 20%;
+    bottom: 0;
+    height: 4.5em;
+    position: absolute;
     background-color: rgb(75, 75, 75);
     justify-content: center;
+    display: flex;
+    align-items: center;
     text-align: center;
-    border-style: solid;
-    border-color: yellow;
+}
+
+h1 {
+    margin: 0;
+}
+
+.create_user {
+    justify-content: left;
+    text-align: left;
+    margin: 1em;
+}
+
+.create_user h1{
+    margin-bottom: 1em;
+}
+
+.menu_btn {
+    width: 10em;
+    height: 3em;
+}
+
+.user_list {
+    justify-content: left;
+    text-align: left;
+    margin: 1em;
+}
+
+.user_list h1 {
+    margin-bottom: 1em;
 }
 
 .container {
@@ -38,17 +63,14 @@ footer {
     width: 60%;
     justify-content: center;
     text-align: center;
-    border-style: solid;
-    border-color: green;
 }
 
 .content {
-    width: 80%;
-    border-style: solid;
-    border-color: cyan;
+    width: 100%;
 }
 
 .title {
-    font-size: 50px;
+    text-align: left;
+    padding: 1em;
     color: white;
 }
