--- a/Python/Host Maid/Templates/ins/menu.html
+++ b/Python/Host Maid/Templates/ins/menu.html
@@ -4,6 +4,5 @@
     <p><a href="{{url_for("delete")}}"><button class = "menu_btn">Удалить</button></a></p>
     <p><a href="{{url_for("edit")}}"><button class = "menu_btn">Редактировать</button></a></p>
     <p><a href="{{url_for("about")}}"><button class = "menu_btn">О нас</button></a></p>
-    <p><a href="{{url_for("user_list")}}"><button class = "menu_btn">Список пользователй</button></a></p>
-    <p><a href="{{url_for("user")}}"><button class = "menu_btn">Профиль</button></a></p>
+    <p><a href="{{url_for("user_list")}}"><button class = "menu_btn">Пользователи</button></a></p>
 </div>
