--- a/Python/Host Maid/Templates/about.html
+++ b/Python/Host Maid/Templates/about.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block content %}
+	<img src="{{url_for("static", filename="img/logo.png")}}">
 	{{data.content}}
 {% endblock %}
