--- a/Python/Host Maid/Templates/base/main.html
+++ b/Python/Host Maid/Templates/base/main.html
@@ -14,7 +14,9 @@
 
 	<div class="container">
 		<div class="content">
-			{% block content %}{% endblock %}
+			{% block content %}
+				<!-- Content -->
+			{% endblock %}
 		</div>
 		
 		{% include 'ins/aside.html'%}
