--- a/Python/Host Maid/Templates/ins/menu.html
+++ b/Python/Host Maid/Templates/ins/menu.html
@@ -1,6 +1,6 @@
 <div class = "menu">
     <p><a href="{{url_for("index")}}"><button class = "menu_btn">Главная</button></a></p>
-    <p><a href="{{url_for("create_user")}}"><button class = "menu_btn">Создать</button></a></p>
+    <p><a href="{{url_for("dish_add")}}"><button class = "menu_btn">Добавить блюдо</button></a></p>
+    <p><a href="{{url_for("dish_list")}}"><button class = "menu_btn">Список блюд</button></a></p>
     <p><a href="{{url_for("about")}}"><button class = "menu_btn">О нас</button></a></p>
-    <p><a href="{{url_for("user_list")}}"><button class = "menu_btn">Пользователи</button></a></p>
 </div>
