--- a/Python/Host Maid/static/css/styles.css
+++ b/Python/Host Maid/static/css/styles.css
@@ -1,17 +1,17 @@
 @import url("palette.css");
 
 body {
-    font-family: 'Cascadia Code';
-    background-color: #202833;
+    font-family: 'georgia';
+    background-color: #fffdd0;
     height: 80%;
-    color: #f1f1f1;
+    color: #292923;
 }
 
 header {
     width: 100%;
     height: 4.5em;
-    background: #202833;
-    border-bottom: solid 1em #0B0C10;
+    background: #fffdd0;
+    border-bottom: solid 1em #f3e5ab;
 }
 
 aside {
@@ -22,12 +22,12 @@ footer {
     bottom: 0;
     height: 4.5em;
     position: absolute;
-    background-color: #202833;
+    background-color: #faf0be;
     justify-content: center;
     display: flex;
     align-items: center;
     text-align: center;
-    color: #f1f1f1;
+    color: #292923;
 }
 
 h1 {
@@ -38,8 +38,8 @@ button, input[type="submit"] {
     width: 150px;
     border-radius: 0.5em;
     padding: 10px;
-    background-color: #46A29F;
-    color: #f1f1f1;
+    background-color: #faf0be;
+    color: #292923;
     border: none;
     cursor: pointer;
     font-weight: bold;
@@ -48,11 +48,12 @@ button, input[type="submit"] {
 }
 
 button:hover, input[type="submit"]:hover {
-    background-color: #55c4c0;
+    background-color: #f3e5ab;
+    color: #556832;
 }
 
 li {
-    background-color: #1a2029;
+    background-color: #faf0be;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -63,11 +64,11 @@ li {
 }
 
 li:hover {
-    background-color: #303c4d;
+    background-color: #f3e5ab;
 }
 
 a {
-    color: #6c63ff;
+    color: #556832;
     text-decoration: none;
     font-weight: bold;
     margin-right: 1em;
@@ -75,7 +76,7 @@ a {
 }
 
 a:hover {
-    color: #9d94ff;
+    color: #6b8e23;
 }
 
 .id {
@@ -94,7 +95,7 @@ a:hover {
 }
 
 .dish_add h1, .dish_update h1{
-    color: #f1f1f1;
+    color: #292923;
     font-size: 2em;
     margin-bottom: 1em;
 }
@@ -102,23 +103,23 @@ a:hover {
 .dish_add input[type="text"], .dish_update input[type="text"]{
     padding: 10px;
     margin-right: 10px;
-    border: 1px solid #303c4d;
+    border: 1px solid #f3e5ab;
     border-radius: 5px;
-    background-color: #1a2029;
-    color: #f1f1f1;
+    background-color: #faf0be;
+    color: #292923;
     font-size: 14px;
     transition: border-color 0.3s ease;
 }
 
 .dish_add input[type="text"]:focus, .dish_update input[type="text"]:focus {
-    border-color: #6c63ff;
+    border-color: #6b8e23;
     outline: none;
 }
 
 .dish_add input[type="submit"], .dish_update input[type="submit"] {
     padding: 10px 20px;
-    background-color: #007bff;
-    color: #f1f1f1;
+    background-color: #6b8e23;
+    color: #292923;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -127,7 +128,7 @@ a:hover {
 }
 
 .dish_add input[type="submit"]:hover, .dish_update input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #6b8e23;
 }
 
 .menu_btn {
@@ -141,7 +142,7 @@ a:hover {
     margin: 1em;
     list-style-type: none;
     padding: 0;
-    color: #f1f1f1;
+    color: #292923;
     font-size: 1em;
 }
 
@@ -165,7 +166,7 @@ a:hover {
 .title {
     text-align: left;
     padding: 1em;
-    color: #f1f1f1;
+    color: #292923;
 }
 
 .dish {
@@ -184,10 +185,10 @@ a:hover {
 select {
     width: 12em;
     padding: 8px;
-    background-color: #1E1E24;
-    border: 1px solid #3B3E48;
+    background-color: #faf0be;
+    border: 1px solid #f3e5ab;
     border-radius: 4px;
-    color: white;
+    color: 292923;
     appearance: none;
     background-image: url('data:image/svg+xml;utf8,<svg fill="white" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5H7z"/></svg>');
     background-repeat: no-repeat;
